Fixes problem where open games covers previous and next buttons

--- a/client/templates/home/openGames.css
+++ b/client/templates/home/openGames.css
@@ -3,7 +3,7 @@
 }
 
 .games-container {
-	height: 260px;
+	min-height: 200px;
 }
 
 .open-game {
